tests/netconvert/import/XML/errors/broken_edge/edge#type__empty1/errors.netconvert
Error: Attribute 'type' in definition of edge '1' is empty.
Quitting (on error).
